Criação da classe de conexão ao banco.

--- a/CalendarioTarefas/nbproject/project.properties
+++ b/CalendarioTarefas/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/CalendarioTarefas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql_jdbc_5.1.5.jar=C:\\Users\\gaoliveira\\Documents\\NetBeansProjects\\Caixa\\mysql_jdbc_5.1.5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql_jdbc_5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
