--- a/CalendarioTarefas/nbproject/project.properties
+++ b/CalendarioTarefas/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Classes.CalendarioTarefas
+main.class=Classes.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
