--- a/CalendarioTarefas/nbproject/project.properties
+++ b/CalendarioTarefas/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/CalendarioTarefas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-email-1.4.jar=commons-email-1.4.jar
+file.reference.javax.mail.jar=javax.mail.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=mysql-connector-java-5.1.38-bin.jar
 file.reference.mysql_jdbc_5.1.5.jar=mysql_jdbc_5.1.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${file.reference.mysql_jdbc_5.1.5.jar}
+    ${file.reference.mysql_jdbc_5.1.5.jar}:\
+    ${file.reference.commons-email-1.4.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Controller.Main
+main.class=View.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
